force-app/main/default/objects/mixmax__MixmaxError__c/mixmax__MixmaxError__c.object-meta.xml
<CustomObject>
    <description>Individual errors from Mixmax deployed code.</description>
    <label>Mixmax Error</label>
    <nameField>
        <displayFormat>M-{00000000}</displayFormat>
        <label>Mixmax Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mixmax Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>