force-app/main/default/objects/mixmax__MixmaxError__c/fields/mixmax__Info__c.field-meta.xml
<CustomField>
    <fullName>mixmax__Info__c</fullName>
    <label>Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>