force-app/main/default/objects/mixmax__MixmaxError__c/fields/mixmax__LineNumber__c.field-meta.xml
<CustomField>
    <fullName>mixmax__LineNumber__c</fullName>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>