force-app/main/default/objects/mixmax__MixmaxError__c/fields/mixmax__Message__c.field-meta.xml
<CustomField>
    <fullName>mixmax__Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>