force-app/main/default/objects/mixmax__MixmaxError__c/fields/mixmax__TypeName__c.field-meta.xml
<CustomField>
    <fullName>mixmax__TypeName__c</fullName>
    <label>Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>